# rabbitmq-tests

./: pyproject.toml
rabbitmq_tests/: consumer_stock.py  consumer_stock_product.py  emit_log.py  producer.py  receive_logs.py
