[tool.poetry]
name = "rabbitmq_tests"
version = "0.1.0"
description = ""
authors = ["Gilson Paulino <gilsonbp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.2.0"
ipython = "^7.27.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
